[package]
name = "pcp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_more = { version = "0.99.17", features = ["display"] }
num_enum = "0.7.0"
rand = "0.8.5"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["net", "time"] }
tracing = "0.1.40"

[dev-dependencies]
rand_chacha = "0.3.1"
